docs(view):完成AdvancedSettings页面布局

--- a/src/components/BasicSettings/BasicSettings.less
+++ b/src/components/BasicSettings/BasicSettings.less
@@ -118,26 +118,28 @@
   
   .block {
     width: 50%;
+    .item_title {
+      font-family: Roboto, PingFang SC, Lantinghei SC, Microsoft Yahei,
+        Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
+      color: #151515;
+      letter-spacing: 0;
+      font-size: 14px;
+      min-width: 100px;
+      text-align: right;
+      line-height: 32px;
+    }
+    .item_input {
+      margin-left: 16px;
+      width: calc(100% - 100px);
+      line-height: 32px;
+      display: flex;
+      flex-wrap: nowrap;
+    }
     .voting_name,
     .voting_duration {
       display: flex;
       margin-bottom: 28px;
       height: 36px;
-      .item_title {
-        font-family: Roboto, PingFang SC, Lantinghei SC, Microsoft Yahei,
-          Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-        color: #151515;
-        letter-spacing: 0;
-        font-size: 14px;
-        min-width: 100px;
-        text-align: right;
-        line-height: 32px;
-      }
-      .item_input {
-        margin-left: 16px;
-        width: calc(100% - 100px);
-        line-height: 32px;
-      }
     }
   
     .voting_profile {
@@ -145,21 +147,6 @@
       flex-wrap: nowrap;
       height: 150px;
       margin-bottom: 28px;
-      .item_title {
-        font-family: Roboto, PingFang SC, Lantinghei SC, Microsoft Yahei,
-          Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-        color: #151515;
-        letter-spacing: 0;
-        font-size: 14px;
-        min-width: 100px;
-        text-align: right;
-        line-height: 32px;
-      }
-      .item_input {
-        margin-left: 16px;
-        width: calc(100% - 100px);
-        line-height: 32px;
-      }
     }
   
     .voting_picture {
@@ -167,35 +154,11 @@
       flex-wrap: nowrap;
       height: 219px;
       margin-bottom: 28px;
-      .item_title {
-        font-family: Roboto, PingFang SC, Lantinghei SC, Microsoft Yahei,
-          Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-        color: #151515;
-        letter-spacing: 0;
-        font-size: 14px;
-        min-width: 100px;
-        text-align: right;
-        line-height: 32px;
-      }
-      .item_input {
-        margin-left: 16px;
-        line-height: 32px;
-      }
     }
     .voting_items {
       display: flex;
       flex-wrap: nowrap;
       margin-bottom: 28px;
-      .item_title {
-        font-family: Roboto, PingFang SC, Lantinghei SC, Microsoft Yahei,
-          Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
-        color: #151515;
-        letter-spacing: 0;
-        font-size: 14px;
-        min-width: 100px;
-        text-align: right;
-        line-height: 32px;
-      }
       .item_radio {
         margin-left: 16px;
         width: calc(100% - 100px);
