docs(view):完成VotingList页面布局

--- a/src/components/AdvancedSettings/AdvancedSettings.less
+++ b/src/components/AdvancedSettings/AdvancedSettings.less
@@ -110,7 +110,7 @@
     position: relative;
     min-height: 600px;
     padding-top: 68px;
-    .first_step {
+    .third_step {
       padding: 0 40px 70px 40px;
       background-color: #fff;
     }
@@ -132,6 +132,7 @@
         margin-left: 16px;
         width: calc(100% - 100px);
         line-height: 32px;
+        
     }
 
     .voting_rule{
@@ -273,7 +274,7 @@
   
   .mobile_preview {
     position: absolute;
-    bottom: -200px;
+    top: -380px;
     left: 400px;
     transform: scale(0.375);
   }
